# JointAnalysis

./: Dockerfile  JointAnalysis.py  README.md  check_input.py  chromatographic.py  database.py  discriminate.py  format_data.py  joint.py  mrgroup.py  nextflow.config  openswath_feature.py  pipeline.nf  preprocessing.py  pyproject.toml  reports.py  test-joint.ipynb  utils.py
data/: win.tsv
src/: joint.py  setup.py  utils.py
src/mrgd/: chromatographic.py  debug.ipynb  discriminate.py  format_data.py  joint.py  mrgd.py  mrgroup.py  preprocessing.py  test-joint.ipynb  utils.py
