[project]
name = "jointanalysis"
version = "0.0.1"
authors = [{ name="louie", email="ychlouie@gmail.com" },]
dependencies = ["Cython >= 0.29.24",
                "numba >= 0.53.1",
                "PyMSNumpress >= 0.2.3",
                "numpy >= 1.19.2",
                "lmdb >= 1.4.1",
                "pandas >= 1.1.5",
                "xgboost >= 1.3.3",
                "seaborn >= 0.11.2",
                "matplotlib >= 3.3.4",
                "pulearn == 0.0.7",
                "tqdm >= 4.62.3",
                "loguru >= 0.7.2",
                "click >= 8.0.3",
                "scikit-learn >= 0.24.2",
                "scipy >= 1.5.2",
                "statsmodels >= 0.12.2"]

description = "Joint Analysis of DIA datasets"
readme = "README.md"
requires-python = "==3.6.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=59.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/yachliu/JointAnalysis"
Issues = "https://github.com/yachliu/JointAnalysis/issues"